--- a/mern-client/package.json
+++ b/mern-client/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
