--- a/mern-client/package.json
+++ b/mern-client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite-react": "^0.7.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "prop-types": "^15.8.1",
