--- a/mern-client/.gitignore
+++ b/mern-client/.gitignore
@@ -11,7 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
-firebase
+src/firebase/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
